Minor Webdev Fixes 1. Fixed Image Resizing on Purpose of Project. 2. Added Spacing on the Features 3. Text Centers on Small Screens (Features Section Only) 4. Fixed the Navbar   - Text sizing is decreased so it catches the attention lesser than actual content.   - Added Padding to make it look less crowded.

--- a/code/static/styles.css
+++ b/code/static/styles.css
@@ -15,6 +15,7 @@
 html {
     scroll-behavior: smooth;
     background-color: white;
+    text-decoration: none;
 }
 
 #home {
@@ -52,14 +53,14 @@ img {
     color: var(--color-highlight) !important;
 }
 .navbar-brand {
-    font-size: 45px !important;
+    font-size: 35px !important;
     font-weight: 600 !important;
     padding-left: 20px !important;
 }
 .nav-link {
-    font-size: 30px !important;
-    padding-right: 45px !important;
-    padding-left: 45px !important;
+    font-size: 20px !important;
+    padding-right: 30px !important;
+    padding-left: 30px !important;
 }
 
 .dropdown-menu.dropdown-menu-right{
@@ -186,6 +187,7 @@ img {
 }
 
 
+
 @media (max-width: 992px) {
     .navbar-brand {
         font-size: 28px !important;
@@ -289,4 +291,6 @@ img {
         margin-top: 50px;
     }
     
+
+
 }
